# nix-build-view

./: .gitignore  01-curl-transport.pl  Makefile  README  README.md  cdemo.c  default.nix  demo.c  demo.cpp  demo2.cpp  demo3.cpp  net_curl_easy.pl  preview  www_curl_easy.pl
design-experiments/: README  demo.cpp  demo2.cpp  demo3.cpp  new_idea.txt
nix-build-view/: AdvancedString.hpp  BuildWidget.cpp  BuildWidget.hpp  BuildWidgetManager.cpp  BuildWidgetManager.hpp  CMakeLists.txt  ColorCodes.h  ColorManager.cpp  ColorManager.hpp  FetchWidget.cpp  FetchWidget.hpp  FetchWidgetManager.cpp  FetchWidgetManager.hpp  HelpWidget.cpp  HelpWidget.hpp  Layout.cpp  Layout.hpp  ListWidget.cpp  ListWidget.hpp  Makefile  StatusWidget.cpp  StatusWidget.hpp  TDD-AdvancedStringTest.cpp  TDD-nix-build.cpp  TDD-nix-build.hpp  TerminalWidget.cpp  TerminalWidget.hpp  UrlWidget.cpp  UrlWidget.hpp  VerticalSpacerWidget.cpp  VerticalSpacerWidget.hpp  Widget.hpp  WidgetManagerBase.cpp  WidgetManagerBase.hpp  WindowManager.cpp  WindowManager.hpp  nix-build-view.cpp  stdout_writer  test.cpp  version.hpp
